syntax = "proto3";

package grpc;
option go_package = "github.com/Wepeel/Courier/internal/app/protos";

service DoctorService {
    rpc GetDisease (GetDiseaseRequest) returns (GetDiseaseResponse) {}

}

message GetDiseaseRequest {
    
}

message GetDiseaseResponse {
    
}